--- a/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
+++ b/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
@@ -102,7 +102,7 @@
 
 <!--同意不同意按钮 start-->
 <block wx:if="{{problem.status == 2}}">
-	<view hidden="{{show}}">
+	<view hidden="{{show}}" class="btn-review">
 		<van-button round type="primary" bindtap="agree">同意</van-button>
 		<van-button round type="danger" bindtap="disagree">拒绝</van-button>
 	</view>
