--- a/pages/control/tjzljc/zljcDetail/zljcDetail.wxss
+++ b/pages/control/tjzljc/zljcDetail/zljcDetail.wxss
@@ -1,1 +1,6 @@
-/* pages/control/tjzljc/zljcDetail/zljcDetail.wxss */
+.btn-review{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin: 15rpx 20rpx;
+}
