--- a/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
+++ b/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
@@ -33,7 +33,9 @@
 			<view wx:else="{{item.answerStatus == 1}}" style="margin-left:40rpx">
 				<van-tag plain type="primary" size="large">待审核</van-tag>
 			</view>
-
+			<view style="font-size:12px; color:rgba(210, 105, 30, .8); margin-left:40rpx">
+				{{item.company}}({{item.position}}) {{item.answer}} {{item.commitTime}}
+			</view>
 			<van-field value="{{item.reply}}" label="整改回复" type="textarea" autosize show-word-limit maxlength="{{maxPlanLength}}" border="{{true}}" />
 			<block wx:for="{{item.imageList}}" wx:for-item="image">
 				<van-image width="100" height="100" lazy-load src="{{image.imageUrl?'http://localhost:16000'+image.imageUrl:''}}" />
