--- a/pages/control/txxmxx/txGqxx/txGqxx.wxml
+++ b/pages/control/txxmxx/txGqxx/txGqxx.wxml
@@ -1,10 +1,12 @@
 <!--pages/control/tjgqxx/tjgqxx.wxml-->
 <import src="/template/commitRecord/commitRecord.wxml" />
-
+<van-toast id="van-toast" />
 
 <view class="project-name">{{ projectName }}</view>
 
 <van-collapse value="{{ activeNames }}" bind:change="onChange">
+
+	<!-- 1、工期管理 -->
 	<van-collapse-item title="工期管理" name="1">
 		<van-cell-group>
 			<van-field value="{{ pmScheduleManageRecord.contractDuration }}" bind:input="inputContractDuration" bind required clearable label="合同工期" type="number" placeholder="请输入合同工期" />
@@ -16,99 +18,128 @@
 			<van-button icon="passed" bind:click="submitGqXx" size="mini" type="info">保存</van-button>
 		</view>
 	</van-collapse-item>
+
+	<!-- 2、开工信息 -->
 	<van-collapse-item custom-class="van-collapse-item-bgc" title="开工信息" name="2" wx:if="{{ hasRecord }}">
 		<view class="btn-wrapper">
 			<van-button icon="plus" size="mini" type="info" bind:click="showKgXxPopup">添加</van-button>
 		</view>
 
 		<view class="kg-msg-list">
-		<block wx:for="{{scheduleManageMsgRecordList}}" wx:for-index="idx" wx:for-item="item" wx:key="index">
-			<van-swipe-cell right-width="{{ 65 }}" left-width="{{ 65 }}">
-				<!-- <view slot="left">选择</view> -->
-				<view class="kg-msg-list-item">
-					<view class="num">{{ idx + 1 }}、</view>
-					<view class="kg-msg-list-item-row-wrapper">
-						<view class="kg-msg-list-item-row">
-							<view class="kg-msg-list-item-key">开工内容：</view>
-							<view class="kg-msg-list-item-val">{{ item.content }}</view>
+			<block wx:for="{{scheduleManageMsgRecordList}}" wx:for-index="idx" wx:for-item="item" wx:key="index">
+				<van-swipe-cell right-width="{{ 65 }}" left-width="{{ 65 }}">
+					<!-- <view slot="left">选择</view> -->
+					<view class="kg-msg-list-item">
+						<view class="num">{{ idx + 1 }}、</view>
+						<view class="kg-msg-list-item-row-wrapper">
+							<view class="kg-msg-list-item-row">
+								<view class="kg-msg-list-item-key">开工内容：</view>
+								<view class="kg-msg-list-item-val">{{ item.content }}</view>
+							</view>
+
+							<view class="kg-msg-list-item-row">
+								<view class="kg-msg-list-item-key">开工时间：</view>
+								<view class="kg-msg-list-item-val">{{ item.date }}</view>
+							</view>
+							<view class="kg-msg-list-item-row">
+								<view class="kg-msg-list-item-key">造价占比：</view>
+								<view class="kg-msg-list-item-val">{{ item.costPoint }}</view>
+							</view>
+							<view class="kg-msg-list-item-row">
+								<view class="kg-msg-list-item-key">造价：</view>
+								<view class="kg-msg-list-item-val">{{ item.cost }}</view>
+							</view>
 						</view>
 
-						<view class="kg-msg-list-item-row">
-							<view class="kg-msg-list-item-key">开工时间：</view>
-							<view class="kg-msg-list-item-val">{{ item.date }}</view>
-						</view>
-						<view class="kg-msg-list-item-row">
-							<view class="kg-msg-list-item-key">造价占比：</view>
-							<view class="kg-msg-list-item-val">{{ item.costPoint }}</view>
-						</view>
-						<view class="kg-msg-list-item-row">
-							<view class="kg-msg-list-item-key">造价：</view>
-							<view class="kg-msg-list-item-val">{{ item.cost }}</view>
-						</view>
 					</view>
-
-				</view>
-				<view slot="right">
-					<view class="delete-btn" id="{{idx}}" catchtap="deleteKgXx">删除</view>
-				</view>
-			</van-swipe-cell>
+					<view slot="right">
+						<view class="delete-btn" id="{{idx}}" catchtap="deleteKgXx">删除</view>
+					</view>
+				</van-swipe-cell>
 			</block>
 		</view>
 	</van-collapse-item>
 
+	<!-- 3、工期影响 -->
 	<van-collapse-item title="工期影响" name="3" wx:if="{{ hasRecord }}">
 		<view class="btn-wrapper">
-			<van-button icon="plus" size="mini" type="info">添加</van-button>
+			<van-button icon="plus" size="mini" type="info" bind:click="showYxgqPopup">添加</van-button>
 		</view>
 		<view class="gqyx-list">
-			<van-swipe-cell right-width="{{ 65 }}" left-width="{{ 65 }}">
-				<!-- <view slot="left">选择</view> -->
+			<block wx:for="{{scheduleManageEffectRecordList}}" wx:key="index">
 				<view class="gqyx-list-item">
 					<view class="gqyx-list-item-row">
-						<view class="gqyx-list-item-key">1、 2020-11-11</view>
-						<view class="gqyx-list-item-val">阻工</view>
+						<view class="gqyx-list-item-key">{{index+1}}、 {{item.date}}</view>
+						<view class="gqyx-list-item-val">{{item.effectMsg}}</view>
 					</view>
 				</view>
-				<view slot="right">
-					<view class="delete-effect-btn">删除</view>
-				</view>
-			</van-swipe-cell>
-
-			<view class="gqyx-list-item">
-				<view class="gqyx-list-item-row">
-					<view class="gqyx-list-item-key">2、 2020-11-11</view>
-					<view class="gqyx-list-item-val">停水停电停工</view>
-				</view>
-			</view>
+			</block>
 		</view>
 	</van-collapse-item>
 </van-collapse>
 
+<!-- 2、开工批次信息 -->
 <van-popup show="{{ showKgXxPopup }}" position="bottom" bind:close="closeKgXxPopup">
 <van-cell-group>
-  <van-field
+	<van-field
+		type="textarea"
+		maxlength="255"
+		show-word-limit 
 		label="开工内容"
+		placeholder="请输入开工内容"
     model:value="{{ kgContent }}"
-    placeholder="请输入开工内容"
     border="{{ false }}"
   />
 	
   <picker mode="date" value="{{date}}" bindchange="bindKgDateChange">
-    	<van-field
-		label="开工时间"
-    model:value="{{ kgDate }}"
-    placeholder="请输入开工时间"
-    border="{{ false }}"
-  />
+    <van-field
+			label="开工时间"
+			model:value="{{ kgDate }}"
+			placeholder="请输入开工时间"
+			border="{{ false }}"
+		/>
   </picker>
-
 
 	<van-field
 		label="造价占比"
-    model:value="{{ costPoint }}"
-    placeholder="请输入造价占比"
+    model:value="{{costPoint}}"
+    placeholder="请输入造价占比，单位(%)"
     border="{{ false }}"
-  />
+	/>
+	
+	<!-- <van-field
+		label="造价"
+    model:value="{{cost}}"
+    placeholder="请输入造价"
+    border="{{ false }}"
+		bind:change="inputCost" 
+  /> -->
 	<van-button block type="info" bind:click="saveKgXx">保存</van-button>
+</van-cell-group>
+</van-popup>
+
+
+<!-- 3、影响工期 -->
+<van-popup show="{{ showYxgqPopup }}" position="bottom" bind:close="closeYxgqPopup">
+<van-cell-group>
+  <picker mode="date" value="{{date}}" bindchange="bindYxDateChange">
+    <van-field
+			label="影响时间"
+			model:value="{{ yxDate }}"
+			placeholder="请输入影响时间"
+			border="{{ false }}"
+		/>
+	</picker>
+	
+	<picker mode="selector" range="{{effectReasonList}}" bindchange="bindYxMsgChange">
+    <van-field
+			label="原因"
+			model:value="{{ effectMsg }}"
+			placeholder="请输入原因"
+			border="{{ false }}"
+		/>
+	</picker>
+	
+	<van-button block type="info" bind:click="saveYxgq">保存</van-button>
 </van-cell-group>
 </van-popup>
