--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxml
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxml
@@ -98,16 +98,16 @@
                 <van-field data-id="{{scheduleInfoMap.zszxfslg.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="zszxfslg" data-step_name="装饰装修工程" data-node_name="扶手栏杆" bind:blur="percentageBlur" value="{{scheduleInfoMap.zszxfslg.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.zszxfslg.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
-              <van-cell-group title="外墙面层">
-                <van-field data-id="{{scheduleInfoMap.zszxwqmc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="zszxwqmc" data-step_name="装饰装修工程" data-node_name="外墙面层" bind:blur="percentageBlur" value="{{scheduleInfoMap.zszxwqmc.percentage}}" label="百分比" placeholder="请输入完成情况" />
+              <van-cell-group title="屋面墙面">
+                <van-field data-id="{{scheduleInfoMap.zszxwqmc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="zszxwqmc" data-step_name="装饰装修工程" data-node_name="屋面墙面" bind:blur="percentageBlur" value="{{scheduleInfoMap.zszxwqmc.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.zszxwqmc.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
               <van-cell-group title="电梯安装">
                 <van-field data-id="{{scheduleInfoMap.zszxdtaz.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="zszxdtaz" data-step_name="装饰装修工程" data-node_name="电梯安装" bind:blur="percentageBlur" value="{{scheduleInfoMap.zszxdtaz.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.zszxdtaz.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
-              <van-cell-group title="消防安装">
-                <van-field data-id="{{scheduleInfoMap.zszxxfaz.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="zszxxfaz" data-step_name="装饰装修工程" data-node_name="消防安装" bind:blur="percentageBlur" value="{{scheduleInfoMap.zszxxfaz.percentage}}" label="百分比" placeholder="请输入完成情况" />
+              <van-cell-group title="水电消防">
+                <van-field data-id="{{scheduleInfoMap.zszxxfaz.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="zszxxfaz" data-step_name="装饰装修工程" data-node_name="水电消防" bind:blur="percentageBlur" value="{{scheduleInfoMap.zszxxfaz.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.zszxxfaz.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
               <van-cell-group title="楼地面散水">
@@ -117,16 +117,16 @@
             </van-tab>
             <!-- 配套工程 -->
             <van-tab title="配套工程">
-              <van-cell-group title="供水工程">
-                <van-field data-id="{{scheduleInfoMap.ptgsgc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="ptgsgc" data-step_name="配套工程" data-node_name="供水工程" bind:blur="percentageBlur" value="{{scheduleInfoMap.ptgsgc.percentage}}" label="百分比" placeholder="请输入完成情况" />
+              <van-cell-group title="水电气工程">
+                <van-field data-id="{{scheduleInfoMap.ptgsgc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="ptgsgc" data-step_name="配套工程" data-node_name="水电气工程" bind:blur="percentageBlur" value="{{scheduleInfoMap.ptgsgc.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.ptgsgc.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
-              <van-cell-group title="供电工程">
-                <van-field data-id="{{scheduleInfoMap.ptgdgc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="ptgdgc" data-step_name="配套工程" data-node_name="供电工程" bind:blur="percentageBlur" value="{{scheduleInfoMap.ptgdgc.percentage}}" label="百分比" placeholder="请输入完成情况" />
+              <van-cell-group title="围墙监控">
+                <van-field data-id="{{scheduleInfoMap.ptgdgc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="ptgdgc" data-step_name="配套工程" data-node_name="围墙监控" bind:blur="percentageBlur" value="{{scheduleInfoMap.ptgdgc.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.ptgdgc.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
-              <van-cell-group title="供气工程">
-                <van-field data-id="{{scheduleInfoMap.ptgqgc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="ptgqgc" data-step_name="配套工程" data-node_name="供气工程" bind:blur="percentageBlur" value="{{scheduleInfoMap.ptgqgc.percentage}}" label="百分比" placeholder="请输入完成情况" />
+              <van-cell-group title="零星工程">
+                <van-field data-id="{{scheduleInfoMap.ptgqgc.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="ptgqgc" data-step_name="配套工程" data-node_name="零星工程" bind:blur="percentageBlur" value="{{scheduleInfoMap.ptgqgc.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.ptgqgc.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
               </van-cell-group>
               <van-cell-group title="排水排污">
@@ -503,8 +503,8 @@
                 <van-field data-id="{{scheduleInfoMap.jpsgdaz.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="jpsgdaz" data-step_name="给排水工程" data-node_name="管道安装" bind:blur="percentageBlur" value="{{scheduleInfoMap.jpsgdaz.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.jpsgdaz.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
             </van-cell-group>
-            <van-cell-group title="管道包封">
-                <van-field data-id="{{scheduleInfoMap.jpsgdbf.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="jpsgdbf" data-step_name="给排水工程" data-node_name="管道包封" bind:blur="percentageBlur" value="{{scheduleInfoMap.jpsgdbf.percentage}}" label="百分比" placeholder="请输入完成情况" />
+            <van-cell-group title="管道基座">
+                <van-field data-id="{{scheduleInfoMap.jpsgdbf.id}}" readonly="{{!scheduleShow?false:true}}" data-tag="jpsgdbf" data-step_name="给排水工程" data-node_name="管道基座" bind:blur="percentageBlur" value="{{scheduleInfoMap.jpsgdbf.percentage}}" label="百分比" placeholder="请输入完成情况" />
                 <van-field value="{{scheduleInfoMap.jpsgdbf.outputValue}}" label="产值" readonly="{{scheduleShow?false:true}}" placeholder="请输入产值" />
             </van-cell-group>
             <van-cell-group title="管道填砂">
