--- a/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
+++ b/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
@@ -23,23 +23,22 @@
 	<block wx:for="{{answerList}}">
 		<view style="background-color: #fff;height: 250px;">
 			<van-divider contentPosition="center">回复</van-divider>
-
-			<view wx:if="{{item.answerStatus == 3}}" style="margin-left:40rpx">
-				<van-tag plain type="success" size="large">已同意</van-tag>
-			</view>
-			<view wx:elif="{{item.answerStatus == 4}}" style="margin-left:40rpx">
-				<van-tag plain type="danger" size="large">不同意</van-tag>
-			</view>
-			<view wx:else="{{item.answerStatus == 1}}" style="margin-left:40rpx">
-				<van-tag plain type="primary" size="large">待审核</van-tag>
-			</view>
-			<view style="font-size:12px; color:rgba(210, 105, 30, .8); margin-left:40rpx">
+			<view style="font-size:13px; color:rgba(85, 85, 85, .8); margin-left:40rpx">
 				{{item.company}}({{item.position}}) {{item.answer}} {{item.commitTime}}
 			</view>
 			<van-field value="{{item.reply}}" label="整改回复" type="textarea" autosize show-word-limit maxlength="{{maxPlanLength}}" border="{{true}}" />
 			<block wx:for="{{item.imageList}}" wx:for-item="image">
 				<van-image width="100" height="100" lazy-load src="{{image.imageUrl?'http://localhost:16000'+image.imageUrl:''}}" />
 			</block>
+			<view wx:if="{{item.answerStatus == 3}}" style="margin-left:40rpx">
+				审批意见：<van-tag plain type="success" size="large">已同意</van-tag>
+			</view>
+			<view wx:elif="{{item.answerStatus == 4}}" style="margin-left:40rpx">
+				审批意见：<van-tag plain type="danger" size="large">不同意</van-tag>
+			</view>
+			<view wx:else="{{item.answerStatus == 1}}" style="margin-left:40rpx">
+				审批意见：<van-tag plain type="primary" size="large">待审核</van-tag>
+			</view>
 		</view>
 	</block>
 	<!--回复列表 end-->
