--- a/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
+++ b/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
@@ -25,17 +25,7 @@
 	<block wx:for="{{answerList}}">
 		<view style="background-color: #fff;height: 250px;">
 			<van-divider contentPosition="center">回复</van-divider>
-
-			<view wx:if="{{item.answerStatus == 3}}" style="margin-left:40rpx">
-				<van-tag plain type="success" size="large">已同意</van-tag>
-			</view>
-			<view wx:elif="{{item.answerStatus == 4}}" style="margin-left:40rpx">
-				<van-tag plain type="danger" size="large">不同意</van-tag>
-			</view>
-			<view wx:else="{{item.answerStatus == 1}}" style="margin-left:40rpx">
-				<van-tag plain type="primary" size="large">待审核</van-tag>
-			</view>
-			<view style="font-size:12px; color:rgba(210, 105, 30, .8); margin-left:40rpx">
+			<view style="font-size:13px; color:rgba(85, 85, 85, .8); margin-left:40rpx">
 				{{item.company}}({{item.position}}) {{item.answer}} {{item.commitTime}}
 			</view>
 
@@ -43,6 +33,15 @@
 			<block wx:for="{{item.imageList}}" wx:for-item="image">
 				<van-image width="100" height="100" lazy-load src="{{image.imageUrl?'http://localhost:16000'+image.imageUrl:''}}" />
 			</block>
+			<view wx:if="{{item.answerStatus == 3}}" style="margin-left:40rpx">
+				审批意见：<van-tag plain type="success" size="large">已同意</van-tag>
+			</view>
+			<view wx:elif="{{item.answerStatus == 4}}" style="margin-left:40rpx">
+				审批意见：<van-tag plain type="danger" size="large">不同意</van-tag>
+			</view>
+			<view wx:else="{{item.answerStatus == 1}}" style="margin-left:40rpx">
+				审批意见：<van-tag plain type="primary" size="large">待审核</van-tag>
+			</view>
 		</view>
 	</block>
 	<!--回复列表 end-->
@@ -66,14 +65,14 @@
 	</block>
 	<!--上传图片及回复end-->
 
-<!--同意不同意按钮 start-->
-<block wx:if="{{problem.status == 2}}">
-	<view hidden="{{show}}" class="btn-review">
-		<van-button round type="primary" bindtap="agree">同意</van-button>
-		<van-button round type="danger" bindtap="disagree">拒绝</van-button>
-	</view>
-</block>
-<!--同意不同意按钮 end-->
+	<!--同意不同意按钮 start-->
+	<block wx:if="{{problem.status == 2}}">
+		<view hidden="{{show}}" class="btn-review">
+			<van-button round type="primary" bindtap="agree">同意</van-button>
+			<van-button round type="danger" bindtap="disagree">拒绝</van-button>
+		</view>
+	</block>
+	<!--同意不同意按钮 end-->
 
 	<!--不同意页面 start-->
 	<block wx:if="{{problem.status == 4}}">
