--- a/pages/tableData/datapages/zljc/zljcView/zljcView.wxml
+++ b/pages/tableData/datapages/zljc/zljcView/zljcView.wxml
@@ -1,9 +1,5 @@
 <view style="padding-bottom: 100rpx">
-	<van-collapse
-	 accordion
-	 value="{{activeNames}}"
-	 bind:change="collapseChange"
-	>
+	<van-collapse accordion value="{{activeNames}}" bind:change="collapseChange">
 		<van-collapse-item value="{{unitName}}">
 
 			<view slot="title">
@@ -12,23 +8,11 @@
 			</view>
 
 			<van-cell-group>
-				<block
-				 wx:for="{{timeNameList}}"
-				 wx:for-index="index"
-				 wx:for-item="item"
-				 wx:key="index"
-				>
-				<view>
-					<van-count-down data-id="{{item.id}}" time="{{ item.remainTime }}" format="DD 天 HH 时 mm 分 ss 秒" bind:finish="finished"/>
-				</view>
-					<van-cell
-					 title="{{item.commitTime}}"
-					 value="{{item.submitter}}"
-					 border="{{ true }}"
-					 is-link
-					 bind:click=""
-					 url="/pages/control/tjzljc/zljcDetail/zljcDetail?id={{item.id}}"
-					>
+				<block wx:for="{{timeNameList}}" wx:for-index="index" wx:for-item="item" wx:key="index">
+					<view>
+						<van-count-down data-id="{{item.id}}" time="{{ item.remainTime }}" format="DD 天 HH 时 mm 分 ss 秒" bind:finish="finished" />
+					</view>
+					<van-cell title="{{item.commitTime}}" value="{{item.submitter}}" border="{{ true }}" is-link bind:click="" url="/pages/control/tjzljc/zljcDetail/zljcDetail?id={{item.id}}">
 					</van-cell>
 				</block>
 			</van-cell-group>
@@ -37,4 +21,3 @@
 
 	</van-collapse>
 </view>
-
