--- a/pages/control/tjqzsp/qzspDetail/qzspDetail.wxss
+++ b/pages/control/tjqzsp/qzspDetail/qzspDetail.wxss
@@ -7,3 +7,10 @@
   border-radius: 6rpx; /* 卡片圆角弧度 */
   background-color: #ffffff;/* 卡片背景颜色 */
 }
+
+.btn-review{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin: 15rpx 20rpx;
+}
